# algo-engineering

./: CMakeLists.txt  README.md
answers/: README.md  main.cpp  pi_approximation.cpp  pi_approximation.h
answers/week01/: CMakeLists.txt  pi_approximation.cpp  pi_approximation.h  week01.cpp
answers/week01/exam-exercises/: exercises.md
answers/week02/: CMakeLists.txt  week02.cpp
answers/week02/coding-warmup/: coding_warmup.h  race_condition.cpp
answers/week02/exam-exercises/: pi_numerical_integration.cpp
answers/week03/: CMakeLists.txt  week03.cpp
answers/week03/coding-warmup/: coding_warmup.h  mandelbrot.cpp  mandelbrot_solution.cpp  pi_numerical_integration.cpp
answers/week03/exam-exercises/: exam_exercises_c.h  exam_exercises_cpp.h  exercises.md  fib.c  game_of_life.c  hello_world.c  pi_monte_carlo.cpp
answers/week04/: CMakeLists.txt  week04.cpp
answers/week04/coding-warmup/: coding_warmup.h  merge_custom.cpp  merge_sort_improved.cpp
answers/week04/exam-exercises/: exam_exercises.h  exercises.md  min_max_quicksort.cpp
answers/week05/: CMakeLists.txt
answers/week05/exam-exercises/fizzbuzz-tests/: CMakeLists.txt  catch_main.cpp  catch_tests_fizzbuzz.cpp
answers/week05/exam-exercises/fizzbuzz-tests/fizzbuzz/: CMakeLists.txt
answers/week05/exam-exercises/fizzbuzz-tests/fizzbuzz/include/: fizzbuzz.h
answers/week05/exam-exercises/fizzbuzz-tests/fizzbuzz/src/: fizzbuzz.cpp
answers/week05/exam-exercises/quantpng/: CMakeLists.txt  Makefile  main.cpp
answers/week05/exam-exercises/quantpng/lodepng/: CMakeLists.txt
answers/week05/exam-exercises/quantpng/lodepng/src/: lodepng.cpp
answers/week05/exam-exercises/quantpng/quantize/: CMakeLists.txt
answers/week1/: CMakeLists.txt  pi_approximation.cpp
answers/week2/: CMakeLists.txt
answers/week2/coding-warmup/: bad_schedule.cpp  coding_warmup.h  unbalanced_workload.cpp
answers/week2/exam-exercises/: pi_numerical_integration.h
answers/week3/: CMakeLists.txt  week3.cpp
answers/week3/coding-warmup/: coding_warmup.h
paper/: README.md
project/: README.md
